# pet-adoption-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CHAT_DEPLOYMENT_GUIDE.md  CI-CD-DEPLOYMENT.md  DEPLOYMENT.md  E2E-TEST-ANALYSIS.md  GITHUB_PUSH_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  PHOTO_UPLOAD_CHECKLIST.md  QUICK_START_OPTIMIZATION.md  README.md  STORY_2.5_COMPLETION.md  TESTING_GUIDE.md  TESTING_REFERENCE.md  database_backup.sql  docker-compose.prod.yml  docker-compose.yml  push_to_github.ps1  run_all_tests.ps1  run_all_tests.sh  validate-deployment.sh
backend/: ARCHITECTURE_COMPARISON.md  AWS_IAM_SETUP.md  CLEANUP_LOG.md  CLOUDFRONT_SETUP.md  DATABASE_SETUP.md  Dockerfile  MIGRATION_GUIDE.md  REFACTORING_PROGRESS.md  V2_API_FIX_PLAN.md  V2_API_STATUS.md  V2_API_TESTING.md  aws-iam-policy.json  manage_db.py  pyproject.toml  requirements.txt  setup.cfg  start_backend.ps1  test_architecture.py  test_imports.py
backend/alembic/: env.py
backend/alembic/versions/: 06212cf91465_add_files_table.py  1bde096b8ff2_add_notification_type_and_link.py  1c81a230458f_update_pet_status_add_review_states.py  253e7eb0c4cb_merge_heads.py  37f4fcc517ec_add_pet_age_years_months_to_chat_pet_.py  4853a5452c14_add_created_by_to_pets.py  54f82e98c924_add_review_decisions_table_for_story_3_4.py  5ca7c0dd4380_extend_application_document_model.py  623743c6733f_merge_first_last_name_to_name.py  73a2e819b925_merge_heads.py  8dc579ab472d_remove_address_fields_keep_only_address_.py  add_home_visit_fields.py  (+11 more)
backend/app/: database.py  exceptions.py  main.py  main.py.backup  main.py.original
backend/seeds/: __init__.py  dev_data.py
backend/tests/: __init__.py  test_auth.py
(+221 files in other folders)
